Fixed Partner alignment on mobile

--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -42,10 +42,11 @@ h1{
 @media(max-width:800px){
     .gallery{
         flex-direction: column;
+        align-items: center;
     }
 
     .projects img{
-        width: 50%;
+        width: 100%;
         align-self: center;
     }
     .projects{
